# curso-django

./: .coveragerc  .env.example  .gitignore  LICENSE  NOTES.md  README.md  notes.md  pyproject.toml  pytest.ini  requirements.txt
authors/: forms.py  serializers.py  urls.py  validators.py  views.py
authors/forms/: __init__.py  login_form.py  recipe_form.py  register_form.py
authors/migrations/: 0001_initial.py
authors/tests/: test_author_register_form.py
authors/views/: __init__.py  all.py  api.py  dashboard_recipe.py  profile.py
base/templates/global/: base.html  home.html
locale/pt_BR/LC_MESSAGES/: django.mo  django.po
project/: settings.py  urls.py
recipes/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_alter_recipe_category_alter_recipe_cover_and_more.py  0002_alter_recipe_options_alter_recipe_tags_and_more.py
recipes/templates/recipes/: about.html  home.html
recipes/tests/: test_recipe_api.py  test_recipe_base.py  test_recipe_category_view.py  test_recipe_detail_view.py  test_recipe_home_view.py  test_recipe_models.py  test_recipe_search_view.py  test_recipe_urls.py  test_recipe_views.py
recipes/views/: __init__.py  api.py  site.py
static/recipes/css/: style.css
tag/: admin.py
tag/migrations/: 0001_initial.py
templates/global/: home.html
tests/functional_tests/authors/: base.py  test_authors_login.py  test_authors_logout.py  (+1 more)
utils/: browser.py  django_forms.py  factory.py  pagination.py  slug.py  strings.py  test_pagination.py
utils/recipes/: factory.py
(+27 files in other folders)
